--- a/loeffelfreunde/index.html
+++ b/loeffelfreunde/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Leseglück</title>
+    <title>Löffelfreu(n)de</title>
     <link rel="stylesheet" href="/styles/fontawesome.css">
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="stylesheet" href="/styles/löffelfreunde.css">
