--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/styles/fontawesome.css">
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="stylesheet" href="/styles/index.css">
-    <!-- <script src="/scripts/insert-recipes.js" charset="utf-8"></script> -->
+    <script src="/scripts/index.js" charset="utf-8"></script>
   </head>
   <body>
     <img src="/imgs/logo-pappe.svg" alt="logo" id="logo">
